[gd_scene load_steps=7 format=2]

[ext_resource path="res://background/pause_background.png" type="Texture" id=1]
[ext_resource path="res://fonts/Pixeled.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://pause.gd" type="Script" id=3]
[ext_resource path="res://sounds/cambiando de pesta√±a.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 15
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -126.0
margin_right = 170.0
margin_bottom = 159.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 338.0
margin_bottom = 98.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 338.0
margin_bottom = 144.0

[node name="Full" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 138.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "Full Screen"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 142.0
margin_right = 166.0
margin_bottom = 42.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 148.0
margin_right = 338.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 93.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "Volume "

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
margin_left = 97.0
margin_right = 338.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -80.0
max_value = 0.0

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 194.0
margin_right = 338.0
margin_bottom = 242.0
custom_colors/font_color_focus = Color( 0.937255, 0.992157, 0.996078, 1 )
custom_colors/font_color_hover = Color( 0, 0.811765, 1, 1 )
custom_colors/font_color_pressed = Color( 0.0509804, 0.466667, 0.466667, 1 )
custom_fonts/font = SubResource( 2 )
text = "Back"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
